* Bugfix: text-overflow on empty span is not necessary

--- a/asset/css/records.scss
+++ b/asset/css/records.scss
@@ -53,6 +53,10 @@
 		background:url(../img/icons.png) no-repeat 10px -777px;
 	}
 
+	td.exticon {
+		text-overflow: clip;
+	}
+
 	col.exticon {
 		width: 35px;
 	}
